--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Descriptions\TableDescription.cs" />
     <Compile Include="Descriptions\ColumnDescription.cs" />
     <Compile Include="Descriptions\UniqueDescription.cs" />
+    <Compile Include="Exceptions\ReferencedConstraintException.cs" />
+    <Compile Include="Exceptions\ConstraintNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidConstraintNameException.cs" />
     <Compile Include="Exceptions\MultiplePrimaryKeysException.cs" />
     <Compile Include="Interfaces\IColumn.cs" />
