--- a/SqlServer/SqlServer.csproj
+++ b/SqlServer/SqlServer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Constraints.cs" />
     <Compile Include="Enums\DataType.cs" />
     <Compile Include="Enums\Enums.cs" />
+    <Compile Include="Indexes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerDatabase.cs" />
   </ItemGroup>
