Initial implementation of the Create method on Columns class.

--- a/SqlServer/SqlServer.csproj
+++ b/SqlServer/SqlServer.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Columns.cs" />
     <Compile Include="Constraints.cs" />
+    <Compile Include="Enums\Keyword.cs" />
     <Compile Include="Enums\DataType.cs" />
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="Indexes.cs" />
