--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -47,7 +47,9 @@
     <Compile Include="Descriptions\TableDescription.cs" />
     <Compile Include="Descriptions\ColumnDescription.cs" />
     <Compile Include="Descriptions\UniqueDescription.cs" />
+    <Compile Include="Exceptions\TableNotFoundException.cs" />
     <Compile Include="Exceptions\IndexNotFoundException.cs" />
+    <Compile Include="Exceptions\InvalidColumnNameException.cs" />
     <Compile Include="Exceptions\InvalidIndexNameException.cs" />
     <Compile Include="Exceptions\InvalidDataTypeException.cs" />
     <Compile Include="Exceptions\InvalidDescriptionException.cs" />
