--- a/SqlServer/SqlServer.csproj
+++ b/SqlServer/SqlServer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Indexes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerDatabase.cs" />
+    <Compile Include="Tables.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
