--- a/Tests/Tests.SqlServer/Tests.SqlServer.csproj
+++ b/Tests/Tests.SqlServer/Tests.SqlServer.csproj
@@ -64,6 +64,7 @@
     <Compile Include="SqlServerDatabaseTests.cs" />
     <Compile Include="ConstraintsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TablesTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
