Initial implementation of Remove method on Tables class.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Exceptions\ColumnNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidTableNameException.cs" />
     <Compile Include="Exceptions\ParilisException.cs" />
+    <Compile Include="Exceptions\ReferencedTableException.cs" />
     <Compile Include="Exceptions\SingleColumnException.cs" />
     <Compile Include="Exceptions\ReferencedColumnException.cs" />
     <Compile Include="Exceptions\TableNotFoundException.cs" />
