--- a/SqlServer/SqlServer.csproj
+++ b/SqlServer/SqlServer.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="Indexes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schemas.cs" />
     <Compile Include="SqlServerDatabase.cs" />
     <Compile Include="Tables.cs" />
   </ItemGroup>
