Initial implementation of Remove method on Schemas class.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -48,9 +48,11 @@
     <Compile Include="Descriptions\ColumnDescription.cs" />
     <Compile Include="Descriptions\UniqueDescription.cs" />
     <Compile Include="Exceptions\ColumnNotFoundException.cs" />
+    <Compile Include="Exceptions\SchemaNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidSchemaNameException.cs" />
     <Compile Include="Exceptions\InvalidTableNameException.cs" />
     <Compile Include="Exceptions\ParilisException.cs" />
+    <Compile Include="Exceptions\ReferencedSchemaException.cs" />
     <Compile Include="Exceptions\ReferencedTableException.cs" />
     <Compile Include="Exceptions\SingleColumnException.cs" />
     <Compile Include="Exceptions\ReferencedColumnException.cs" />
