Created SqlServerEntity and refactored SqlServer implementations class to inherit from it. All implementations are now initialized with a ConnectionInfo object. Several adjustments based on tests that did not pass.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Components.cs" />
     <Compile Include="Descriptions\ConstraintDescription.cs" />
+    <Compile Include="ConnectionInfo.cs" />
     <Compile Include="Descriptions\DefaultDescription.cs" />
     <Compile Include="Descriptions\ForeignKeyDescription.cs" />
     <Compile Include="Descriptions\IndexDescription.cs" />
