--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -45,6 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\Action.cs" />
+    <Compile Include="Actions\ConstraintAction.cs" />
+    <Compile Include="Actions\PrimaryKeyRemoval.cs" />
+    <Compile Include="Actions\PrimaryKeyCreation.cs" />
+    <Compile Include="Actions\ForeignKeyRemoval.cs" />
+    <Compile Include="Actions\ForeignKeyCreation.cs" />
+    <Compile Include="Actions\UniqueRemoval.cs" />
+    <Compile Include="Actions\UniqueCreation.cs" />
+    <Compile Include="Actions\DefaultCreation.cs" />
+    <Compile Include="Actions\DefaultRemoval.cs" />
     <Compile Include="Components.cs" />
     <Compile Include="Descriptions\ConstraintDescription.cs" />
     <Compile Include="ConnectionInfo.cs" />
@@ -88,6 +98,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
