--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -46,7 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\Action.cs" />
+    <Compile Include="Actions\ColumnAction.cs" />
+    <Compile Include="Actions\ColumnModification.cs" />
+    <Compile Include="Actions\ColumnRemoval.cs" />
     <Compile Include="Actions\ConstraintAction.cs" />
+    <Compile Include="Actions\ColumnCreation.cs" />
     <Compile Include="Actions\IndexRemoval.cs" />
     <Compile Include="Actions\IndexCreation.cs" />
     <Compile Include="Actions\IndexAction.cs" />
