--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -46,6 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\Action.cs" />
+    <Compile Include="Actions\TableRemoval.cs" />
+    <Compile Include="Actions\TableCreation.cs" />
+    <Compile Include="Actions\TableAction.cs" />
     <Compile Include="Actions\ColumnAction.cs" />
     <Compile Include="Actions\ColumnModification.cs" />
     <Compile Include="Actions\ColumnRemoval.cs" />
