--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -46,6 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\Action.cs" />
+    <Compile Include="Actions\SchemaAction.cs" />
+    <Compile Include="Actions\SchemaRemoval.cs" />
+    <Compile Include="Actions\SchemaCreation.cs" />
     <Compile Include="Actions\TableRemoval.cs" />
     <Compile Include="Actions\TableCreation.cs" />
     <Compile Include="Actions\TableAction.cs" />
