GetSchemas method implementation on SqlServerDatabase class.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Components.cs" />
     <Compile Include="Descriptions\ConstraintDescription.cs" />
     <Compile Include="ConnectionInfo.cs" />
+    <Compile Include="Descriptions\DatabaseDescription.cs" />
     <Compile Include="Descriptions\DefaultDescription.cs" />
     <Compile Include="Descriptions\ForeignKeyDescription.cs" />
     <Compile Include="Descriptions\IndexDescription.cs" />
