--- a/Core/App.config
+++ b/Core/App.config
@@ -1,13 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <section name="log4net" type="System.Configuration.IgnoreSectionHandler" />
         <section name="castle" type="Castle.Windsor.Configuration.AppDomain.CastleSectionHandler, Castle.Windsor" />
     </configSections>
     <castle>
         <facilities>
-            <facility id="startable" type="Castle.Facilities.Startable.StartableFacility, Castle.Windsor" />
             <facility id="Core" type="Core.Facility, Core" />
             <facility id="SqlServer" type="SqlServer.Facility, SqlServer" />
         </facilities>
     </castle>
+    <log4net debug="false">
+        <appender name="FileAppender" type="log4net.Appender.FileAppender">
+            <file value="log-parilis.txt" />
+            <appendToFile value="true" />
+            <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%newline%date [%thread] %-5level %logger: %newline %message %newline" />
+            </layout>
+        </appender>
+        <root>
+            <level value="ALL" />
+            <appender-ref ref="FileAppender" />
+        </root>
+    </log4net>
 </configuration>
