--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -36,6 +36,9 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\..\..\ProgramData\Nuget\References\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -107,6 +110,7 @@
     <Compile Include="Interfaces\ISchema.cs" />
     <Compile Include="Interfaces\IDatabase.cs" />
     <Compile Include="Interfaces\ITable.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Parilis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
