--- a/Core/App.config
+++ b/Core/App.config
@@ -16,7 +16,7 @@
             <appendToFile value="true" />
             <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
             <layout type="log4net.Layout.PatternLayout">
-                <conversionPattern value="%newline%date [%thread] %-5level %logger: %newline %message %newline" />
+                <conversionPattern value="%newline%date [ %-5level]: %message %newline" />
             </layout>
         </appender>
         <root>
