--- a/Tests/Tests.SqlServer/App.config
+++ b/Tests/Tests.SqlServer/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <section name="log4net" type="System.Configuration.IgnoreSectionHandler" />
         <section name="castle" type="Castle.Windsor.Configuration.AppDomain.CastleSectionHandler, Castle.Windsor" />
     </configSections>
     <castle>
@@ -10,4 +11,18 @@
             <facility id="Tests.SqlServer" type="Tests.SqlServer.Facility, Tests.SqlServer" />            
         </facilities>
     </castle>
+    <log4net debug="false">
+        <appender name="FileAppender" type="log4net.Appender.FileAppender">
+            <file value="log-parilis.txt" />
+            <appendToFile value="true" />
+            <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%newline%date [ %-5level]: %message %newline" />
+            </layout>
+        </appender>
+        <root>
+            <level value="ALL" />
+            <appender-ref ref="FileAppender" />
+        </root>
+    </log4net>
 </configuration>
