--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ConnectionInfo.cs" />
     <Compile Include="Descriptions\DatabaseDescription.cs" />
     <Compile Include="Descriptions\DefaultDescription.cs" />
+    <Compile Include="Descriptions\Description.cs" />
     <Compile Include="Descriptions\ForeignKeyDescription.cs" />
     <Compile Include="Descriptions\IndexDescription.cs" />
     <Compile Include="Descriptions\PrimaryKeyDescription.cs" />
