--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionIdentifier.cs" />
+    <Compile Include="ActionQueue.cs" />
     <Compile Include="Actions\Action.cs" />
     <Compile Include="Actions\SchemaAction.cs" />
     <Compile Include="Actions\SchemaRemoval.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="Descriptions\TableDescription.cs" />
     <Compile Include="Descriptions\ColumnDescription.cs" />
     <Compile Include="Descriptions\UniqueDescription.cs" />
+    <Compile Include="Exceptions\InvalidActionException.cs" />
     <Compile Include="Exceptions\ColumnNotFoundException.cs" />
     <Compile Include="Exceptions\SchemaNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidSchemaNameException.cs" />
