--- a/Tests/Tests.Core/Tests.Core.csproj
+++ b/Tests/Tests.Core/Tests.Core.csproj
@@ -82,6 +82,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ActionIdentifierTests.cs" />
+    <Compile Include="ActionQueueTests.cs" />
     <Compile Include="Actions\ColumnActionTests.cs" />
     <Compile Include="Actions\SchemaActionTests.cs" />
     <Compile Include="Actions\TableActionTests.cs" />
