SqlServer DataTypes now have the AllowLengthAttribute. This information is going to be used on ColumnDescription validation (ongoing).

--- a/SqlServer/SqlServer.csproj
+++ b/SqlServer/SqlServer.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\AllowsLengthAttribute.cs" />
     <Compile Include="Columns.cs" />
     <Compile Include="Constraints.cs" />
     <Compile Include="Enums\Keyword.cs" />
