--- a/Tests/Tests.SqlServer/Tests.SqlServer.csproj
+++ b/Tests/Tests.SqlServer/Tests.SqlServer.csproj
@@ -72,6 +72,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ColumnsTests.cs" />
+    <Compile Include="EnumsTests.cs" />
     <Compile Include="Facility.cs" />
     <Compile Include="IndexesTests.cs" />
     <Compile Include="ParilisTests.cs" />
