Updated assembly names.

--- a/Core/App.config
+++ b/Core/App.config
@@ -6,8 +6,8 @@
     </configSections>
     <castle>
         <facilities>
-            <facility id="Core" type="Core.Facility, Core" />
-            <facility id="SqlServer" type="SqlServer.Facility, SqlServer" />
+            <facility id="Core" type="Core.Facility, Parilis.Core" />
+            <facility id="SqlServer" type="SqlServer.Facility, Parilis.SqlServer" />
         </facilities>
     </castle>
     <log4net debug="false">
