--- a/Tests/Tests.Core/App.config
+++ b/Tests/Tests.Core/App.config
@@ -5,7 +5,7 @@
     </configSections>
     <castle>
         <facilities>
-            <facility id="Core" type="Core.Facility, Core" />
+            <facility id="Core" type="Core.Facility, Parilis.Core" />
             <facility id="Tests.Core" type="Tests.Core.Facility, Tests.Core" />
         </facilities>
     </castle>
