--- a/Tests/Tests.SqlServer/App.config
+++ b/Tests/Tests.SqlServer/App.config
@@ -6,8 +6,8 @@
     </configSections>
     <castle>
         <facilities>
-            <facility id="Core" type="Core.Facility, Core" />
-            <facility id="SqlServer" type="SqlServer.Facility, SqlServer" />
+            <facility id="Core" type="Core.Facility, Parilis.Core" />
+            <facility id="SqlServer" type="SqlServer.Facility, Parilis.SqlServer" />
             <facility id="Tests.SqlServer" type="Tests.SqlServer.Facility, Tests.SqlServer" />            
         </facilities>
     </castle>
