--- a/Tests/Tests.Core/Tests.Core.csproj
+++ b/Tests/Tests.Core/Tests.Core.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Actions\ConstraintActionTests.cs" />
     <Compile Include="CastleExtension.cs" />
     <Compile Include="DatabaseDescriptionEqualityTests.cs" />
+    <Compile Include="DatabaseDescriptionIsEmptyTests.cs" />
     <Compile Include="DatabaseTest.cs" />
     <Compile Include="Descriptions\UniqueDescriptionTests.cs" />
     <Compile Include="Descriptions\TableDescriptionTests.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="Descriptions\DefaultDescriptionTests.cs" />
     <Compile Include="Descriptions\ColumnDescriptionTests.cs" />
     <Compile Include="Facility.cs" />
+    <Compile Include="FilterBySchemaTests.cs" />
     <Compile Include="MockTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
