DefaultDescription now has a list of column descriptions instead of columns names.

--- a/Tests/Tests.Core/Tests.Core.csproj
+++ b/Tests/Tests.Core/Tests.Core.csproj
@@ -103,6 +103,7 @@
     <Compile Include="FilterBySchemaTests.cs" />
     <Compile Include="MockTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
