--- a/Tests/Tests.Core/Tests.Core.csproj
+++ b/Tests/Tests.Core/Tests.Core.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Actions\IndexActionTests.cs" />
     <Compile Include="Actions\ConstraintActionTests.cs" />
     <Compile Include="CastleExtension.cs" />
+    <Compile Include="DatabaseDescriptionFilteringTests.cs" />
     <Compile Include="DatabaseDescriptionEqualityTests.cs" />
     <Compile Include="DatabaseDescriptionIsEmptyTests.cs" />
     <Compile Include="DatabaseTest.cs" />
