--- a/Tests/Tests.SqlServer/App.config
+++ b/Tests/Tests.SqlServer/App.config
@@ -25,4 +25,11 @@
             <appender-ref ref="FileAppender" />
         </root>
     </log4net>
+
+    <appSettings>
+        <add key="ServerHostname" value="localhost" />
+        <add key="DatabaseName" value="TESTS_PARILIS" />
+        <add key="User" value="parilis" />
+        <add key="Password" value="yourpassword" />
+    </appSettings>
 </configuration>
