--- a/Tests/Tests.SqlServer/Tests.SqlServer.csproj
+++ b/Tests/Tests.SqlServer/Tests.SqlServer.csproj
@@ -56,6 +56,7 @@
       <HintPath>..\..\Core\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
