--- a/Tests/Tests.SqlServer/App.config
+++ b/Tests/Tests.SqlServer/App.config
@@ -27,7 +27,7 @@
     </log4net>
 
     <appSettings>
-        <add key="ServerHostname" value="localhost" />
+        <add key="ServerHostname" value="localhost\sqlserver" />
         <add key="DatabaseName" value="TESTS_PARILIS" />
         <add key="User" value="parilis" />
         <add key="Password" value="yourpassword" />
