More string formatting refactor; Added an extension class to treat quoted strings to build hardcoded queries that has string parameters (e.g at IN clause).

--- a/SqlServer/SqlServer.csproj
+++ b/SqlServer/SqlServer.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Schemas.cs" />
     <Compile Include="SqlServerDatabase.cs" />
     <Compile Include="SqlServerEntity.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="Tables.cs" />
   </ItemGroup>
   <ItemGroup>
