--- a/Tests/Tests.SqlServer/Tests.SqlServer.csproj
+++ b/Tests/Tests.SqlServer/Tests.SqlServer.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Facility.cs" />
     <Compile Include="IndexesTests.cs" />
     <Compile Include="ParilisTests.cs" />
+    <Compile Include="ParilisTestsBySchema.cs" />
+    <Compile Include="ProgressNotificationTest.cs" />
     <Compile Include="SchemasTests.cs" />
     <Compile Include="SqlServerDatabaseTests.cs" />
     <Compile Include="ConstraintsTests.cs" />
@@ -105,6 +107,11 @@
       <Project>{adfe312c-3aae-4c4d-aa2b-4e112f6128d4}</Project>
       <Name>Tests.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="reference\install-adventureworks.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
